# amg-chat-bot

./: CMakeLists.txt  README.md
include/: chat_client.h  chat_server.h  connected_client.h  constants.h  server_worker.h
src/: CMakeLists.txt  chat_client.cpp  chat_server.cpp  connected_client.cpp  server_worker.cpp
test/: client_test.cpp  server_test.cpp
